--- a/.github/linters/.golangci.yaml
+++ b/.github/linters/.golangci.yaml
@@ -1,9 +1,10 @@
 run:
   modules-download-mode: readonly
-  show-stats: true
+  timeout: 10m
 
 output:
   print-linter-name: false
+  show-stats: true
   sort-results: true
 
 linters:
@@ -15,12 +16,12 @@ linters:
     - bidichk
     - bodyclose
     - contextcheck
+    - copyloopvar
     - durationcheck
     - errcheck
     - errchkjson
     - errorlint
     - exhaustive
-    - exportloopref
     - gocheckcompilerdirectives
     - gochecksumtype
     - gocritic
