--- a/.github/workflows/go-test-windows.yaml
+++ b/.github/workflows/go-test-windows.yaml
@@ -7,13 +7,11 @@ permissions:
 
 jobs:
   go-test-windows:
-    name: "Go test with Senzing: ${{ matrix.senzingsdk-version }}; OS: ${{ matrix.os }}; Go: ${{ matrix.go }}"
-    runs-on: ${{ matrix.os }}
+    name: "Go test with OS: windows-latest; Go: ${{ matrix.go }}"
+    runs-on: windows-latest
     strategy:
       matrix:
         go: ["1.24"]
-        os: [windows-latest]
-        senzingsdk-version: [staging-v4]
 
     steps:
       - name: Checkout repository
