--- a/.github/workflows/go-test-linux.yaml
+++ b/.github/workflows/go-test-linux.yaml
@@ -19,8 +19,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
       - name: Setup go ${{ matrix.go }}
         uses: actions/setup-go@v5
@@ -58,10 +56,10 @@ jobs:
       coverage-config: ./.github/coverage/testcoverage.yaml
 
   slack-notification:
-    needs: [go-test-linux, coverage]
-    if: ${{ always() && contains(fromJSON('["failure", "cancelled"]'), needs.go-test-linux.outputs.status ) && contains(fromJSON('["failure", "cancelled"]'), needs.coverage.outputs.job-status ) && github.ref_name == github.event.repository.default_branch }}
+    needs: [go-test-linux]
+    if: ${{ always() && contains(fromJSON('["failure", "cancelled"]'), needs.go-test-linux.outputs.status ) && github.ref_name == github.event.repository.default_branch }}
     secrets:
       SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
     uses: senzing-factory/build-resources/.github/workflows/build-failure-slack-notification.yaml@v2
     with:
-      job-status: ${{ needs.go-test-linux.outputs.status && needs.coverage.outputs.job-status }}
+      job-status: ${{ needs.go-test-linux.outputs.status }}
