--- a/.github/linters/.golangci.yaml
+++ b/.github/linters/.golangci.yaml
@@ -105,7 +105,7 @@ linters:
     - wastedassign
     - whitespace
     - wrapcheck
-    - wsl
+    - wsl_v5
     - zerologlint
   disable:
     - gochecknoglobals
@@ -144,3 +144,6 @@ formatters:
       - third_party$
       - builtin$
       - examples$
+  settings:
+    golines:
+      max-len: 120
